Sat Nov  4 19:46:01 2006  Tim Janik  <timj@gtk.org>

	* bsefilter-ellf.c: replaced all ellf specific complex number 
	arithmetic by bse_complex*() calls.

	* bsemath.h: provide BSE_COMPLEX_ONE for convenience.

Sat Nov  4 18:14:08 2006  Tim Janik  <timj@gtk.org>

	* gslmathtest.c: removed, this has been ported to bsemathtest and
	is long unused.

Sat Nov  4 17:38:28 2006  Tim Janik  <timj@gtk.org>

	* bsemath.h: don't include neither of the C++ <complex> or the C99
	<complex.h> header files. removed compat typedefs. we'll simply resort
	to using BseComplex in headers and use <complex> in C++ files.

	* bsefilter.h: use BseComplex for complex numbers in header files.

	* bsefilter.cc: adaptions to BseComplex.

	* bsefilter-ellf.c: use BseComplex instead of C99 complex.

	* tests/filtertest.cc: adaptions to BseComplex. fixed elliptic filter
	test to really use stopband_edges, not stopband_db.

Fri Nov  3 02:19:09 2006  Tim Janik  <timj@gtk.org>

	* bsefilter.h, bsefilter.cc: removed transfer funciton nominator and
	denominator from public API, because they are useless for higher 
	order filters. added center-frequency to public API, which is the
	middle frequency for band filters (used to evaluate gain ot stopband).

	* bsefilter-ellf.c: provide BseIIRFilterDesign.center_frequency.
	made some slight precision improvements for cgam evaluations.

	* tests/filtertest.cc: special cased lengthy routines as slowtest.
	removed any code (check, eval) related to filter transfer functions.
	did some test split ups. added random filter tests for butterworth,
	chebyshev1, elliptic. extended generic filter test to test passband
	min/max from both sides. added some stopband tests.

	* tests/filtercatalog.cc: random filter catalog generated with bse-ellf.

Thu Nov  2 22:56:55 2006  Tim Janik  <timj@gtk.org>

	* bsefilter-ellf.c: z_plane_zeros_poles_to_numerator_denomerator():
	reimplemented gain calculation by evaluating the pole and zero